# Celestial-Siege

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WEBSOCKET_SETUP.md  main.cpp
client/: index.html  main.js  mock-server.js  particles.js  style.css
docs/: ARCHITECTURE.md  SHOWCASE_GUIDE.md  TECHNICAL_ANALYSIS.md
include/: CellularAutomata.h  ConsoleRenderer.h  Enemy.h  EnemyTypes.h  GameObject.h  GameWorld.h  PathfindingSystem.h  PhysicsEngine.h  Planet.h  Projectile.h  Tower.h  TowerTypes.h  Vec2d.h  WebSocketServer.h
libs/nlohmann/: json.hpp
libs/websocket/: websocket_server.hpp
src/: CellularAutomata.cpp  GameObject.cpp  GameWorld.cpp  PathfindingSystem.cpp  PhysicsEngine.cpp  WebSocketServer.cpp
